--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -17,6 +17,7 @@ KillMode=mixed
 TimeoutStopSec=5
 PrivateTmp=true
 Restart=always
+SyslogIdentifier=gunicorn
 
 [Install]
 WantedBy=multi-user.target
